--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -341,15 +341,15 @@
                 <tr style="height: auto; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><span class="element_toggler" role="button" aria-controls="tests-menu_1-1" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Tests menu</em></span> </span></p>
-                        <div id="tests-menu_1-1" style="display: none; color: #6096e6;">
+                        <p><span class="element_toggler" role="button" aria-controls="tests-menu_1" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Tests menu</em></span> </span></p>
+                        <div id="tests-menu_1" style="display: none; color: #6096e6;">
                             <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/8311811/preview" alt="tests_menu" /></p>
                         </div>
                     </td>
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>2.</strong></span></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on the <u>Analyse icon</u> to open the analysis menu.</span></strong></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on the <u>&#8721;-icon</u>.</span></strong></td>
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
@@ -359,11 +359,11 @@
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>3.</strong></span></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Go to the <u>Analysis</u>.</strong></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Click on the <u>Analysis</u> button.</strong></td>
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;">Click on <u>Analysis</u> to open the analysis. You can also modify exam results from this menu.<br /><br />
+                    <td style="width: 89.5941%; border-style: hidden;">
                         <img src="/courses/8175/files/8312283/preview" alt="analysis_button" /><br /><br /></td>
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
@@ -455,77 +455,111 @@
 <div class="enhanceable_content tabs">
     <ul>
         <li>
-            <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Step-by-step</strong></span></div>
+            <a href="#A2_steps_tab" class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Step-by-step</strong></span></a>
         </li>
         <li>
-            <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Video</strong></span></div>
+            <a href="#A2_video_tab" class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Video</strong></span></a>
         </li>
     </ul>
-    <div id="tab-0" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
+    <div id="A2_steps_tab" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
         <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
             <tbody>
                 <tr style="height: auto;">
-                    <td style="width: 7%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                    <td style="width: 90%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto; text-align: right;"><span style="font-size: 12pt;"> <span style="color: #8c8c8c;">TestVision Help:</span> <a href="https://uva.testvision.nl/help/en/html/statistische-analyse-opvragen.html"><span style="color: #08a68e;">ENG</span></a> | <a href="https://uva.testvision.nl/help/nl/html/statistische-analyse-opvragen.html"><span style="color: #08a68e;">NL</span></a> </span> <br /><br /></td>
                 </tr>
                 <tr style="height: auto;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto; text-align: right;"><span style="font-size: 12pt;"> <span style="color: #8c8c8c;">TestVision Help:</span> <a href="https://uva.testvision.nl/help/en/html/hoofdmenu.html"><span style="color: #08a68e;">ENG</span></a> | <a href="https://uva.testvision.nl/help/nl/html/hoofdmenu.html"><span style="color: #08a68e;">NL</span></a> </span> <br /><br /></td>
-                </tr>
-                <tr style="height: auto;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto; text-align: left;"><span style="font-size: 12pt;"> </span></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;">
+                        <p><div class="alert alert-info"> 
+                            <a class="icon-info"></a><strong> Note:</strong> You can only mark questions as correct once the exam has been <a href="#FAQ_G2">validated</a>.
+                        </div><br></p>
+                    </td>
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">1.</span> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Grading</u> menu.</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Tests</u> menu.</span> </strong></td>
                 </tr>
                 <tr style="height: auto; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><span class="element_toggler" role="button" aria-controls="grading-menu_2-2" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Grading menu</em></span> </span></p>
-                        <div id="grading-menu_2-2" style="display: none; color: #6096e6;">
-                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="https://canvas.uva.nl/courses/8175/files/7747066/preview" alt="TVO_gradingmenu.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7747066" data-api-returntype="File" /></p>
+                        <p><span class="element_toggler" role="button" aria-controls="tests-menu_2" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Tests menu</em></span> </span></p>
+                        <div id="tests-menu_2" style="display: none; color: #6096e6;">
+                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/8311811/preview" alt="tests_menu" /></p>
                         </div>
                     </td>
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong></strong></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong></strong></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>2.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on the <u>&#8721;-icon</u>.</span></strong></td>
                 </tr>
                 <tr>
-                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;"></td>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">  
+                        <img src="/courses/8175/files/8312245/preview" alt="analyse_icon" /><br><br>
+                    </td>
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong></strong></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong></strong></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>3.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Click on the <u>Modify</u> button.</strong></td>
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;"></td>
+                    <td style="width: 89.5941%; border-style: hidden;">
+                    <img src="/courses/8175/files/8320381/preview" alt="modify_button" /><br /><br /></td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>4.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Go to the <u>Item Result</u> tab to see an overview of the questions.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">In this menu, you can mark answers as correct, exclude them or 'modify' them. Every question type will have a different type of modification.<br /><br />
+                        <img src="/courses/8175/files/8320419/preview" alt="item_result_tab" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>5.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;">Select the questions you'd like you to mark as correct and click on <u>Check modifications</u>.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">You can mark multiple questions correct at once or go one by one and see how the results are affected after you've clicked <u>Check modifications</u>.<br /><br />
+                        <img src="/courses/8175/files/8320725/preview" alt="mark_correct" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>6.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> An overview will show how the results are affected. Click <u>Apply modifications</u> to confirm.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">An overview with three columns will show you how the results are affected by your modifications:<br>
+                        - <b>Original</b> shows what the results were like after the test was taken, before any modifications.<br>
+                        - <b>Current</b> shows what the results are like currently. The original and current columns will be the same if no modifications were done yet.<br>
+                        - <b>New</b> shows what the results will look like after you apply your changes.<br>
+                        <img src="/courses/8175/files/8320797/preview" alt="compare_and_apply" />
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 12pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">
+                        <p style="font-size: 12pt;">&nbsp;</p>
+                    </td>
                 </tr>
             </tbody>
         </table>
     </div>
-    <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
+    <div id="A2_video_tab" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
         <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
             <tbody>
-                <tr style="height: auto;">
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                </tr>
-                <tr style="height: auto;">
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"><br /><br /><br /></td>
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"></td>
+                <tr style="height: auto; padding-bottom: 8px;">
+                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>ENG</span></strong> (unavailable as of 01-03-2023)</td>
+                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>NL</span></strong></td>
                 </tr>
                 <tr>
-                    <td style="width: 50%; border-style: hidden;"><iframe title="YouTube video player" src="" width="450" height="253" allowfullscreen="allowfullscreen" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></td>
-                    <td style="width: 50%; border-style: hidden;"><iframe title="YouTube video player" src="" width="450" height="253" allowfullscreen="allowfullscreen" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></td>
-                </tr>
-                <tr style="height: auto; padding-bottom: 8px;">
-                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>ENG</span></strong></td>
-                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>NL</span></strong></td>
+                    <td style="width: 50%; border-style: hidden;"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/rV1Cc_WhYhM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+                    <td style="width: 50%; border-style: hidden;"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/qgM87sq9jQY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
                 </tr>
             </tbody>
         </table>
