een klein dingetje vergeten

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -686,7 +686,7 @@
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
                     <td style="width: 89.5941%; border-style: hidden;">
                         <p><div class="alert alert-info"> 
-                            <a class="icon-info"></a><strong> Note:</strong> To mark answers of individual students as correct, please go to <a href="#FAQ_A4">2.4 Mark questions as correct for individuals</a>.
+                            <a class="icon-info"></a><strong> Note:</strong> To mark answers of individual students as correct, please go to <a href="#FAQ_A4">2.4 Regrade questions for individual students</a>.
                         </div></p>
                         <p><u>Select</u> the criteria you'd like to mark as correct and click on <u>OK</u> to confirm your modifications. 
                         To quickly view the question and criteria again, click on the <a class="icon-info"></a>info icon and<span class="element_toggler" role="button" aria-controls="view-question" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>on Edit</em></span>.</span></p><br>
