--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -777,13 +777,13 @@
 <div class="enhanceable_content tabs">
     <ul>
         <li>
-            <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Step-by-step</strong></span></div>
+            <a href="#A4_steps_tab" class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Step-by-step</strong></span></a>
         </li>
         <li>
-            <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Video</strong></span></div>
+            <a href="#A4_video_tab" class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Video</strong></span></a>
         </li>
     </ul>
-    <div id="tab-0" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
+    <div id="A4_steps_tab" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
         <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
             <tbody>
                 <tr style="height: auto;">
@@ -792,68 +792,115 @@
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto; text-align: right;"><span style="font-size: 12pt;"> <span style="color: #8c8c8c;">TestVision Help:</span> <a href="https://uva.testvision.nl/help/en/html/hoofdmenu.html"><span style="color: #08a68e;">ENG</span></a> | <a href="https://uva.testvision.nl/help/nl/html/hoofdmenu.html"><span style="color: #08a68e;">NL</span></a> </span> <br /><br /></td>
+                    <td style="width: 90%; border-style: hidden; height: auto; text-align: right;"><span style="font-size: 12pt;"> <span style="color: #8c8c8c;">TestVision Help:</span> <a href="https://uva.testvision.nl/help/en/html/resultaten-aanpassen-op-indivi.html"><span style="color: #08a68e;">ENG</span></a> | <a href="https://uva.testvision.nl/help/nl/html/resultaten-aanpassen-op-indivi.html"><span style="color: #08a68e;">NL</span></a> </span> <br /><br /></td>
                 </tr>
                 <tr style="height: auto;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto; text-align: left;"><span style="font-size: 12pt;"> </span></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;">
+                        <p><div class="alert alert-info"> 
+                            <a class="icon-info"></a><strong> Note:</strong> You can only modify the answer key once the exam has been <a href="#FAQ_G2">validated</a>.
+                        </div><br></p>
+                    </td>
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">1.</span> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Grading</u> menu.</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Sessions</u> menu.</span> </strong></td>
                 </tr>
                 <tr style="height: auto; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><span class="element_toggler" role="button" aria-controls="grading-menu_2-4" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Grading menu</em></span> </span></p>
-                        <div id="grading-menu_2-4" style="display: none; color: #6096e6;">
-                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="https://canvas.uva.nl/courses/8175/files/7747066/preview" alt="TVO_gradingmenu.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7747066" data-api-returntype="File" /></p>
+                        <p><span class="element_toggler" role="button" aria-controls="sessions-menu_2-4" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Sessions menu</em></span> </span></p>
+                        <div id="sessions-menu_2-4" style="display: none; color: #6096e6;">
+                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/8341352/preview" alt="sessions_menu" /></p>
                         </div>
                     </td>
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong></strong></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong></strong></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>2.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on the <u>Results</u> button.</span></strong></td>
                 </tr>
                 <tr>
-                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;"></td>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">
+                        <img src="https://canvas.uva.nl/courses/8175/files/8341422/preview" alt="results" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8341422" data-api-returntype="File" /><br><br>
+                    </td>
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong></strong></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong></strong></td>
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>3.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> <u>Select</u> the student you want to regrade and click on the <u>Modify</u> button.</span></strong></td>
                 </tr>
                 <tr>
-                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;"></td>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">The results are sorted alphabetically by student name by default. You can sort them by other columns by clicking on the column name.<br><br>
+                        <img src="/courses/8175/files/8341723/preview" alt="modify_student_button" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>4.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;">You can mark a question as correct, exclude it or regrade an open question.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">You can scroll through the options below or click on the names to navigate to them:<br>
+                        - <b><a href="#mark_correct">Mark questions as correct</a></b><br>
+                        - <b><a href="#regrade_open">Regrade open question</a></b><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><p><a id="mark_correct"></a></p><span style="font-size: 13pt;"><strong>5A.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Mark questions as correct for an individual student:</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;"><u>Select</u> the questions you wish to mark as correct. You can see how the scoring is affected in the score column.<br><br>
+                        <img src="/courses/8175/files/8341778/preview" alt="mark_correct_individual" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><p><a id="regrade_open"></a></p><span style="font-size: 13pt;"><strong>5B.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Regrade an open question for an individual student:</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">Click on the <u>modify icon</u>. <u>Enter</u> the new score for the student and click on <u>OK</u> to confirm your modifications. The original score is shown in between brackets. Below, the original score per criteria are shown, with the max. amount of point in between brackets.<br><br>
+                        <img src="/courses/8175/files/8341861/preview" alt="modify_button_individual" />
+                        <img src="/courses/8175/files/8341866/preview" alt="modify_score_open" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>6.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on <u>Check modifications</u> to view the effect of your modifications.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">The score of an open question will turn green if it has been modified.<br><br>
+                        <img src="/courses/8175/files/8341926/preview" alt="check_modifications_individual" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>7.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> An overview will show how the score of the student is affected. Click on <u>OK</u> to confirm the new score.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">The original score is shown in between brackets.<br><br>
+                        <img src="/courses/8175/files/8341956/preview" alt="confirm_modifications_individual" /><br><br>
+                    </td>
                 </tr>
             </tbody>
         </table>
     </div>
-    <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
+    <div id="A4_video_tab" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
         <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
             <tbody>
-                <tr style="height: auto;">
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                </tr>
-                <tr style="height: auto;">
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"><br /><br /><br /></td>
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"></td>
-                </tr>
-                <tr>
-                    <td style="width: 50%; border-style: hidden;"><iframe title="YouTube video player" src="" width="450" height="253" allowfullscreen="allowfullscreen" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></td>
-                    <td style="width: 50%; border-style: hidden;"><iframe title="YouTube video player" src="" width="450" height="253" allowfullscreen="allowfullscreen" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></td>
-                </tr>
                 <tr style="height: auto; padding-bottom: 8px;">
-                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>ENG</span></strong></td>
-                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>NL</span></strong></td>
+                    <td style="width: 100%; border-style: hidden; height: auto; text-align: left;"><span>Unfortunately, TestVision does not offer any videos (yet) for this specific issue.</span></td>
                 </tr>
             </tbody>
         </table>
     </div>
 </div>
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#PLACEHOLDER"> <i class="icon-forward"></i> <span>&nbsp;Next: PLACEHOLDER</span> </a></div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
