plaatjes bij 1.1. grading geupdatet

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -10,23 +10,27 @@
     </div>
 </div>
 <div class="grid-row">
-    <div class="col-xs-12 col-md-4">
+    <div class="col-xs-20 col-md-4">
         <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; min-height: 200px;">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
                 <div class="content-box pad-box-mini border border-b">
                     <h4><span style="color: #34495e; font-size: 14pt;"><em>Creating the exam</em></span></h4>
                 </div>
-                <h5><span style="font-size: 13pt; color: #000000;">View instructions <i class="icon-document"></i></span></h5>
+                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test" data-api-returntype="Page">
+                    <h5><span style="font-size: 13pt; color: #000000;">View instructions <i class="icon-document"></i></span></h5>
+                </a>
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-md-4">
+    <div class="col-xs-20 col-md-4">
         <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; min-height: 200px;">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 20px; text-align: left; height: 200px;">
                 <div class="content-box pad-box-mini border border-b">
                     <h4><span style="color: #34495e; font-size: 14pt;"><em>Moment of examination</em></span></h4>
                 </div>
-                <h5><span style="font-size: 13pt; color: #000000;">View FAQ <i class="icon-document"></i></span></h5>
+                <a id="" class="Button Button--large" style="border-width: 1.5px; width: 85%; height: auto; text-align: left; margin-left: auto; margin-right: auto; margin-top: 5px; padding-bottom: 10px;" title="" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination" data-api-returntype="Page">
+                    <h5><span style="font-size: 13pt; color: #000000;">View FAQ <i class="icon-document"></i></span></h5>
+                </a>
             </div>
         </div>
     </div>
@@ -144,13 +148,13 @@
             </tr>
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>2.</strong></span></td>
-                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Go to the <u>Grader</u> tab and click on <u>Grade</u>.</span></strong></td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Go to the <u>Grader</u> tab and click on <u>Grade</u> for the desired exam.</span></strong></td>
             </tr>
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
                 <td style="width: 89.5941%; border-style: hidden;">The grader tab will display the exams to which you've been assigned as grader. 
                     <span style="font-size: 15pt"; style="color: #6096e6";><a id="no_tests" class="Button Button--link" style="text-align: left; margin-left: auto; margin-right: auto;" href="#dialog_for_corrections1"><i class="icon-question"></i><em> Don't see your exam(s)? </em></span></a></span><br>
-                    <img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/7705646/preview" alt="grader_overview.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7705646" data-api-returntype="File" /><br><br>
+                    <img src="/courses/8175/files/8342288/preview" alt="grade_menu" /><br><br>
                 </td>
             </tr>
             <tr style="height: 45px; padding-bottom: 8px;">
@@ -159,15 +163,21 @@
             </tr>
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                <td style="width: 89.5941%; border-style: hidden;">You can also choose to grade by question, by going to the <a id="grade_per_question" style="color: #000000">Grade per question</a> tab.<br /><br /><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/7705790/preview" alt="grading_students-2.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7705790" data-api-returntype="File" /> <br /><br /></td>
+                <td style="width: 89.5941%; border-style: hidden;"><p>You can also choose to grade by question, by clicking on the <span class="element_toggler" role="button" aria-controls="analysis-tooltip-2" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Grade per question tab</em></span>.</span></p><br>
+                    <div id="analysis-tooltip-2" style="display: none; color: #6096e6;">
+                        <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/8342336/preview" alt="grade_per_question" /></p><br>
+                    </div> </a>
+                    <img src="/courses/8175/files/8342292/preview" alt="grade_per_candidate" /><br><br>
+                </td>
             </tr>
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>4.</strong></span></td>
-                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Assign points.</strong></td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Assign points per criteria.</strong></td>
             </tr>
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                <td style="width: 89.5941%; border-style: hidden;">When you're done grading a question, click on <u>Next</u> to go the next question (or student, if you're grading per question).<br /><br /><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/7754515/preview" alt="grading-1.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7754515" data-api-returntype="File" /> <br /><br /><br /></td>
+                <td style="width: 89.5941%; border-style: hidden;">When you're done grading a question, click on <u>Next</u> to go the next question (or student, if you're grading per question).<br /><br />
+                    <img src="/courses/8175/files/8342376/preview" alt="grade_a_question" /> <br /><br /><br /></td>
             </tr>
         </tbody>
     </table>
