--- a/CCSi/Homepage_BUILDINGBLOCKS.html
+++ b/CCSi/Homepage_BUILDINGBLOCKS.html
@@ -62,7 +62,7 @@
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 4: February 27 - March 3</span>
         </a>
         <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8fa674; title="Week 5: October 3-7" href="/courses/36696/modules/310256?wrap=1">
-            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 5: March 6 - 10<</span>
+            <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 5: March 6 - 10</span>
         </a>
         <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #8fa674; title="Week 6: October 10-14" href="/courses/36696/modules/310257?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 6: March 13 - 17</span>
