algemene omschrijving en navigatie geupdatet

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -72,8 +72,6 @@
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A2"> <span style="color: #000000;"> 2.2 &nbsp; Mark questions as correct</span> </a> </span></p>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A3"> <span style="color: #000000;"> 2.3 &nbsp; Mark specific answers as correct </span> </a> </span></p>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A4"> <span style="color: #000000;"> 2.4 &nbsp; Regrade questions for individual students</span> </a> </span></p>
-                <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A5"> <span style="color: #000000;"> 2.5 &nbsp; Other </span> </a> </span></p>
-                <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A4"> <span style="color: #000000;"> 2.6 &nbsp; Other </span> </a> </span></p>
             </div>
         </div>
     </div>
@@ -382,7 +380,7 @@
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>4.</strong></span></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Click on the <u>Modify criteria</u> button.</strong></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Click on the <u>Modify criteria</u> button to start adjusting your criteria.</strong></td>
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
@@ -391,7 +389,7 @@
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>5.</strong></span></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Click on the <u>Adjust scoring</u> button to change the amount of points.</strong></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Click on the <u>Adjust scoring</u> button to confirm that you wish to change the scores of criteria.</strong></td>
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
@@ -427,7 +425,7 @@
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;">The original criteria descripitions and points are shown on the right. Click on <u>OK</u> to confirm your changes.<br><br>
+                    <td style="width: 89.5941%; border-style: hidden;">The original criteria descriptions and points are shown on the right. Click on <u>OK</u> to confirm your changes.<br><br>
                         <img src="/courses/8175/files/8358790/preview" alt="adjust_scoring_points" /> <br /><br /></td>
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
@@ -748,7 +746,7 @@
 <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a></h5>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-    <h4><strong>2.3 &nbsp; Modify the answer key and regrade</strong></h4>
+    <h4><strong>2.3 &nbsp; Mark specific answers as correct for all students</strong></h4>
 </div>
 <div class="enhanceable_content tabs">
     <ul>
