--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -81,8 +81,8 @@
                 <div class="content-box pad-box-mini border border-b">
                     <h4><i class="icon-check"></i> <span style="color: #000000;"> <strong> <span style="font-size: 15pt;"> &nbsp; &nbsp; Finalize grading</span></strong></span></h4>
                 </div>
-                <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="background-color: #08a8a2; border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_F1"> <span style="color: #fbfbfc;"><i class="icon-star"></i> &nbsp; 3.1 &nbsp; Export to Final Grades tool</span> </a> </span></p>
-                <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_F2"> <span style="color: #000000;">3.2 &nbsp; Export grades</span> </a> </span></p>
+                <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_F1"> <span style="color: #000000;"><i class="icon-star"></i> &nbsp; 3A &nbsp; Export grades to Canvas</span> </a> </span></p>
+                <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_F2"> <span style="color: #000000;"><i class="icon-star"></i> &nbsp; 3B &nbsp; Retrieve grades from TestVision (fixed chance score and grade calculation)</span> </a> </span></p>
             </div>
             <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 23px; min-height: 112px; background-color: #fbfbfc;">
                 <p style="text-align: center;"><span style="font-size: 18pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 70%; text-align: center; margin-left: auto; margin-right: auto; padding: 26px 14px 26px 14px;" href="#FAQ_FAQ"> <span style="color: #08a8a2;"> &nbsp; <strong>FAQ</strong>&nbsp; </span> </a> </span></p>
@@ -292,7 +292,7 @@
         </table>
     </div>
 </div>
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#PLACEHOLDER"> <i class="icon-forward"></i> <span>&nbsp;Next: Export to Final Grades tool</span> </a></div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#FAQ_F1"> <i class="icon-forward"></i> <span>&nbsp;Next: Export to Canvas</span> </a></div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -444,7 +444,7 @@
         <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
             <tbody>
                 <tr style="height: auto; padding-bottom: 8px;">
-                    <td style="width: 100%; border-style: hidden; height: auto; text-align: left;"><span>Unfortunately, TestVision does not offer any videos (yet) for this instruction.</span></td>
+                    <td style="width: 100%; border-style: hidden; height: auto; text-align: left;"><span>Unfortunately, TestVision does not offer any videos on this topic.</span></td>
                 </tr>
             </tbody>
         </table>
@@ -701,7 +701,7 @@
                         - <b>Original</b> shows what the results were like after the test was taken, before any modifications.<br>
                         - <b>Current</b> shows what the results are like currently. The original and current columns will be the same if no modifications were done yet.<br>
                         - <b>New</b> shows what the results will look like after you apply your changes.<br>
-                        <img src="/courses/8175/files/8320797/preview" alt="compare_and_apply" />
+                        <img src="/courses/8175/files/8359525/preview" alt="compare_and_apply" />
                     </td>
                 </tr>
                 <tr>
@@ -895,7 +895,7 @@
                         - <b>Original</b> shows what the results were like after the test was taken, before any modifications.<br>
                         - <b>Current</b> shows what the results are like currently. The original and current columns will be the same if no modifications were done yet.<br>
                         - <b>New</b> shows what the results will look like after you apply your changes.<br>
-                        <img src="/courses/8175/files/8320797/preview" alt="compare_and_apply" />
+                        <img src="/courses/8175/files/8359525/preview" alt="compare_and_apply" />
                     </td>
                 </tr>
                 <tr>
@@ -995,7 +995,7 @@
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
                     <td style="width: 89.5941%; border-style: hidden;">The results are sorted alphabetically by student name by default. You can sort them by other columns by clicking on the column name.<br><br>
-                        <img src="/courses/8175/files/8341723/preview" alt="modify_student_button" /><br><br>
+                        <img src="/courses/8175/files/8359841/preview" alt="modify_student_button" /><br><br>
                     </td>
                 </tr>
                 <tr style="height: 45px; padding-bottom: 8px;">
@@ -1046,8 +1046,8 @@
                 </tr>
                 <tr>
                     <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;">The original score is shown in between brackets.<br><br>
-                        <img src="/courses/8175/files/8341956/preview" alt="confirm_modifications_individual" /><br><br>
+                    <td style="width: 89.5941%; border-style: hidden;">The original score is shown on the right side.<br><br>
+                        <img src="/courses/8175/files/8359868/preview" alt="confirm_modifications_student" /><br><br>
                     </td>
                 </tr>
             </tbody>
@@ -1057,7 +1057,7 @@
         <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
             <tbody>
                 <tr style="height: auto; padding-bottom: 8px;">
-                    <td style="width: 100%; border-style: hidden; height: auto; text-align: left;"><span>y, TestVision dUnfortunateloes not offer any videos (yet) for this instruction.</span></td>
+                    <td style="width: 100%; border-style: hidden; height: auto; text-align: left;"><span>Unfortunately, TestVision does not offer any videos on this topic.</span></td>
                 </tr>
             </tbody>
         </table>
@@ -1076,111 +1076,12 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p><a id="FAQ_A5"></a></p>
+<p><a id="FAQ_F1"></a></p>
 <p>&nbsp;</p>
 <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a></h5>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-    <h4><strong>2.5 &nbsp; Other</strong></h4>
-</div>
-<div class="enhanceable_content tabs">
-    <ul>
-        <li>
-            <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Step-by-step</strong></span></div>
-        </li>
-        <li>
-            <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Video</strong></span></div>
-        </li>
-    </ul>
-    <div id="tab-0" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
-        <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
-            <tbody>
-                <tr style="height: auto;">
-                    <td style="width: 7%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                    <td style="width: 90%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                </tr>
-                <tr style="height: auto;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto; text-align: right;"><span style="font-size: 12pt;"> <span style="color: #8c8c8c;">TestVision Help:</span> <a href="https://uva.testvision.nl/help/en/html/hoofdmenu.html"><span style="color: #08a68e;">ENG</span></a> | <a href="https://uva.testvision.nl/help/nl/html/hoofdmenu.html"><span style="color: #08a68e;">NL</span></a> </span> <br /><br /></td>
-                </tr>
-                <tr style="height: auto;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto; text-align: left;"><span style="font-size: 12pt;"> </span></td>
-                </tr>
-                <tr style="height: auto;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">1.</span> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Grading</u> menu.</span> </strong></td>
-                </tr>
-                <tr style="height: auto; padding-bottom: 8px;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><span class="element_toggler" role="button" aria-controls="grading-menu_2-5" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Grading menu</em></span> </span></p>
-                        <div id="grading-menu_2-5" style="display: none; color: #6096e6;">
-                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="https://canvas.uva.nl/courses/8175/files/7747066/preview" alt="TVO_gradingmenu.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7747066" data-api-returntype="File" /></p>
-                        </div>
-                    </td>
-                </tr>
-                <tr style="height: 45px; padding-bottom: 8px;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong></strong></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong></strong></td>
-                </tr>
-                <tr>
-                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;"></td>
-                </tr>
-                <tr style="height: 45px; padding-bottom: 8px;">
-                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong></strong></td>
-                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong></strong></td>
-                </tr>
-                <tr>
-                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
-                    <td style="width: 89.5941%; border-style: hidden;"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
-        <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
-            <tbody>
-                <tr style="height: auto;">
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
-                </tr>
-                <tr style="height: auto;">
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"><br /><br /><br /></td>
-                    <td style="width: 50%%; border-style: hidden; height: auto; text-align: left;"></td>
-                </tr>
-                <tr>
-                    <td style="width: 50%; border-style: hidden;"><iframe title="YouTube video player" src="" width="450" height="253" allowfullscreen="allowfullscreen" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></td>
-                    <td style="width: 50%; border-style: hidden;"><iframe title="YouTube video player" src="" width="450" height="253" allowfullscreen="allowfullscreen" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe></td>
-                </tr>
-                <tr style="height: auto; padding-bottom: 8px;">
-                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>ENG</span></strong></td>
-                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>NL</span></strong></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#PLACEHOLDER"> <i class="icon-forward"></i> <span>&nbsp;Next: PLACEHOLDER</span> </a></div>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p><a id="FAQ_X1"></a></p>
-<p>&nbsp;</p>
-<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a></h5>
-<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-    <h4><strong>3.1. How do I export grades to Canvas' Final Grades tool?</strong></h4>
+    <h4><strong>3.1 Export grades to Canvas</strong></h4>
 </div>
 <div class="enhanceable_content tabs">
     <ul>
