klein begin aan 3b gemaakt

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -1272,7 +1272,7 @@
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: left;"><strong> </strong></td>
                 <td style="width: 90%; border-style: hidden; height: auto; text-align: left;"><strong> </strong>
                     <p><div class="alert alert"> 
-                        <a class="icon-warning"></a><strong> Warning:</strong> The regional format of your computer must be set to the same language as TestVision for this instruction to be succesful. If your computer's regional format does not match TestVision's language, the grade export from TestVision will be interpreted incorrectly and as a result the grades cannot be exported to Canvas.
+                        <a class="icon-warning"></a><strong> Warning:</strong> If you choose to export your grades using this method, your grades might differ from the ones in TestVision. When using the direct link between the final grades tool and TestVision, the final grades tool extracts the points from TestVision and applies its own grade calculation to these points. This calculation includes a chance score for multiple choice questions. If you do not have multiple choice questions, the scores 
                     </div></p>
                 </td>
             </tr>
