faq knop verwijderd uit navigatie

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -76,16 +76,13 @@
         </div>
     </div>
     <div class="col-xs-12 col-md-4">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 25px; min-height: 230px; background-color: #fbfbfc;">
+        <div class="styleguide-section__grid-demo-element" style="height: auto;">
+            <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 25px; min-height: 410px; background-color: #fbfbfc;">
                 <div class="content-box pad-box-mini border border-b">
                     <h4><i class="icon-check"></i> <span style="color: #000000;"> <strong> <span style="font-size: 15pt;"> &nbsp; &nbsp; Export grades</span></strong></span></h4>
                 </div>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_F1"> <span style="color: #000000;"><i class="icon-star"></i> &nbsp; 3A &nbsp; Export grades to Canvas via Excel</span> </a> </span></p>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_F2"> <span style="color: #000000;"><i class="icon-star"></i> &nbsp; 3B &nbsp; Direct grade export to Canvas (with chance score enabled and fixed grade calculation)</span> </a> </span></p>
-            </div>
-            <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 23px; min-height: 112px; background-color: #fbfbfc;">
-                <p style="text-align: center;"><span style="font-size: 18pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 70%; text-align: center; margin-left: auto; margin-right: auto; padding: 26px 14px 26px 14px;" href="#FAQ_FAQ"> <span style="color: #08a8a2;"> &nbsp; <strong>FAQ</strong>&nbsp; </span> </a> </span></p>
             </div>
         </div>
     </div>
